--- a/dir/javascript/express/express-tutorial/_project/package.json
+++ b/dir/javascript/express/express-tutorial/_project/package.json
@@ -1,6 +1,7 @@
 {
   "name": "expresstut",
   "version": "1.0.0",
+  "private": true,
   "description": "Express tutorial by Derek Banas.",
   "main": "app.js",
   "scripts": {
@@ -14,5 +15,8 @@
     "expressjs"
   ],
   "author": "Elwood Berry (me@elwoodberry)",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "express": "^4.16.2"
+  }
 }
