--- a/dir/javascript/express/express-tutorial/_project/package.json
+++ b/dir/javascript/express/express-tutorial/_project/package.json
@@ -17,6 +17,7 @@
   "author": "Elwood Berry (me@elwoodberry)",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.16.2"
+    "express": "^4.16.2",
+    "jade": "^1.11.0"
   }
 }
