--- a/dir/javascript/express/express-tutorial/_project/package.json
+++ b/dir/javascript/express/express-tutorial/_project/package.json
@@ -20,7 +20,9 @@
     "body-parser": "^1.18.2",
     "cookie-parser": "^1.4.3",
     "express": "^4.16.2",
+    "express-session": "^1.15.6",
     "formidable": "^1.1.1",
-    "jade": "^1.11.0"
+    "jade": "^1.11.0",
+    "parseurl": "^1.3.2"
   }
 }
