--- a/dir/javascript/express/express-tutorial/_project/package.json
+++ b/dir/javascript/express/express-tutorial/_project/package.json
@@ -22,6 +22,7 @@
     "express": "^4.16.2",
     "express-session": "^1.15.6",
     "formidable": "^1.1.1",
+    "fs": "0.0.1-security",
     "jade": "^1.11.0",
     "parseurl": "^1.3.2"
   }
