--- a/dir/javascript/express/expressjs-crash-course/_project/package.json
+++ b/dir/javascript/express/expressjs-crash-course/_project/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
+    "express-validator": "^4.3.0",
     "jade": "^1.11.0"
   }
 }
