--- a/dir/javascript/express/expressjs-crash-course/_project/package.json
+++ b/dir/javascript/express/expressjs-crash-course/_project/package.json
@@ -16,6 +16,7 @@
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
     "express-validator": "^4.3.0",
-    "jade": "^1.11.0"
+    "jade": "^1.11.0",
+    "mongojs": "^2.4.1"
   }
 }
