--- a/dir/scaffolds/express-basic/_project/package.json
+++ b/dir/scaffolds/express-basic/_project/package.json
@@ -14,12 +14,13 @@
   },
   "dependencies": {
     "body-parser": "~1.18.2",
-    "bootstrap": "^3.3.7",
+    "bootstrap": "^4.0.0-beta.2",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "express": "~4.15.5",
     "jquery": "^3.2.1",
     "morgan": "~1.9.0",
+    "popper": "^1.12.3",
     "pug": "2.0.0-beta11",
     "serve-favicon": "~2.4.5"
   },
